# VasoAnalyzer

./: .gitattributes  .gitignore  .pre-commit-config.yaml  20251111_Exp02_table.csv  CITATION.cff  COMPREHENSIVE_AUDIT_REPORT.md  DEVELOPMENT.md  DEV_CHANGELOG.md  LICENSE  NOTICE  PURE_MPL_COMPOSER_COMPLETE.md  PURE_MPL_COMPOSER_COMPLETE_DEPRECATED.md  README-dev.md  README.md  RENDERING_SYSTEM.md  TESTING_GUIDE.md  VASO_UI_UX_ANALYSIS.md  VasoAnalyzer.spec  VasoAnalyzer_Project_Report.md  dev.md  project_history.md  pyproject.toml  requirements.txt  style.qss  test_composer_debug.py  test_embedded_events.py  test_project.vaso  test_project.vaso.bak  test_project2.vaso  test_project2.vaso.bak  test_tier1_features.py  tmp_cli_project.vaso  tmp_trace.csv  verify_data_relationships.py
.github/workflows/: build.yml  ci.yml  tests.yml
LICENSES/: CC-BY-NC-SA-4.0.txt
Sample Projects/: Test.vaso  Testv6.vaso
ToImplement/: BEFORE_AFTER_DIAGRAM.md  IMPLEMENTATION_CHECKLIST.md  INDEX.md  QUICK_REFERENCE.md  README.md  SUMMARY.md  changes.diff  event_labels_analysis_and_fixes.md  event_labels_v3_improved.py  implementation_guide.md  test_lane_algorithms.py  visual_explanation.md
docs/: BUNDLE_FORMAT.md  COMPOSER_STATUS.md  CUSTOM_ICONS_GUIDE.md  EXCEL_DYNAMIC_TEMPLATES.md  EXCEL_MACROS_INTEGRATION.md  EXCEL_TEMPLATE_SETUP.md  LICENSE  MANUAL_TESTING_CHECKLIST.md  PREFERENCES_AND_ICONS_UPDATE.md  PREFERENCES_UI_MOCKUP.md  SIMPLE_EPOCH_LABELS.md  TESTING_SUMMARY.md  USER_MANUAL.md  VASOANALYZER_V1.5_FIXES.md  WELCOME_TOUR.md  chart_view_parity_contract_v1.md  commit_message_template_pkg.txt  distribution.md  gif_animator_audit.md  main_window_sync_investigation.md  navigation_model.md  phase4_implementation_summary.md  requirements.txt  snapshot_sync_fixes.md  snapshot_viewer_audit.md  time_sync_canonical_architecture.md  trace_navigation_manual_test.md  ui_contract.md  ui_state_audit.md  ui_workspace_contract.md  vasotracker_import.md
docs/architecture/: vaso_package_v1.md  vaso_snapshot_bundle.md  windows.md
docs/dev/: figure_composer_alignment.md
docs/figure_composer/: Figure_Compiler_Contract.md
docs/migration/: remove_snapshot_viewer_v1.md
docs/ui_audit/: snapshot_tiff_perf_plan.md  snapshot_tiff_pipeline.md  snapshot_viewer_canonical_plan.md  snapshot_viewer_current_state.md  snapshot_viewer_inventory.md  workspace_toolbar_inventory.md  workspace_toolbar_recommendation.md
docs/v3_audit/: v3_dependency_graph.md  v3_hardening_backlog.md  v3_keep_map.md  v3_removal_plan.md
installer/macos/: build_macos.sh
installer/windows/: VasoAnalyzer.iss  build_installer.ps1
packaging/: VasoAnalyzer.spec
packaging/hooks/: rthook_fix_pytz.py
packaging/macos/: Info.plist  build_macos.sh
packaging/windows/: VasoAnalyzer.iss  build_installer.ps1  vasoanalyzer-filetype.reg
proj_test.vasopack/: HEAD.json  project.meta.json
proj_test.vasopack/.staging/: 40a1c3a0d615.sqlite  57f595735355.sqlite
proj_test.vasopack/snapshots/: 000001.sqlite  000002.sqlite
resources/: resources.qrc  style.qss
sample data/20250611_Exp03/: 20250611_NewSoftwareExp03.csv  20250611_NewSoftwareExp03_table.csv
sample data/20250613_Exp01/: 20250613_Exp01.csv  20250613_Exp01_table.csv
sample data/20250613_Exp03/: 20250613_Exp03.csv  20250613_Exp03_table.csv
sample data/20250613_Exp04/: 20250613_Exp04.csv
sample data/New VasoTracker Output/: 20250416_Exp01_table.csv
sample data/Old Files from VasoTracker/: 20191008 MBFA Table.csv  eventDiameters_output.csv
schemas/vaso-package-v1/: dataset.schema.json  event.schema.json  manifest.schema.json
scripts/: backfill_trace_sync.py  demo_event_labels.py  dev_run.py  extract_sample_manager.py  find_missing_imports.py  generate_versioned_icons.py  migrate_to_single_file.py  vaso_export_single_file.py  wire_all_managers.py
src/: VasoAnalyzer.spec  __init__.py  main.py
src/utils/: __init__.py  config.py  style_defaults.py
src/vasoanalyzer/: VasoAnalyzerIcon.icns  __init__.py  cli.py  dual_view_panel.py  event_loader.py  excel_mapper.py  gui.py  legacy_event_loader.py  legacy_trace_loader.py  project.py  project_controller.py  theme_manager.py  tiff_loader.py  trace_event_loader.py  trace_loader.py  version_checker.py
src/vasoanalyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  _sample_data.py  conftest.py  test_analysis_contract_v1.py  test_analysis_metrics_v1.py  test_analysis_provenance_v1.py  test_auto_save_on_close.py  test_clear_session.py  test_composer_state_ignored_v3.py  test_create_project_dialog_validation.py  test_dataset_package.py  test_diameter_toggles.py  test_divider_theme.py  test_drag_drop_and_recent.py  test_dual_view.py  test_event_export_dtype_robust.py  test_event_file_detection.py  test_event_label_layout.py  test_event_lod_debounce.py  test_event_review_panel_edit_time.py  test_event_strip_height.py  test_event_strip_tooltip_hidden.py  test_event_table_column_contract.py  test_event_table_viewport_fit_policy.py  test_excel_map_wizard_io.py  test_excel_map_wizard_theme.py  test_excel_ready_exports_v1.py  test_excel_template_v1.py  test_four_channel_stack_contract.py  test_gutter_layout.py  test_integrity.py  test_main_window_review_dock_theme.py  test_mpl_composer_sizes.py  test_no_banned_terms.py  test_no_event_table_autoexport_default.py  test_open_multiple_samples.py  test_overflow_hints.py  test_panel_trace_sync_v3.py  test_pin_outer_trace.py  test_pkg_mvp.py  (+52 more)
tests/api/: test_public_imports.py
tests/core/: test_project_saving_flow.py
tests/events/: test_cluster.py  test_cluster_edges.py
tests/io/: test_events_value_logic.py
tests/plots/: test_event_labels_v2.py  test_golden.py
tests/services/: test_project_repository.py
tests/smoke/: test_app_launch.py
tests/storage/: test_bundle_format.py  test_embed_reopen_pipeline.py  test_sqlite_assets.py  test_sqlite_conversion.py  test_sqlite_events.py  test_sqlite_projects.py  test_sqlite_save_pipeline.py  test_sqlite_traces.py  test_sqlite_utils_txn.py  (+2 more)
tmp_cli_project.vaso.cache/: index.json
(+315 files in other folders)
