[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vasoanalyzer"
version = "2.3.0"
description = "Developer tooling and tests for the VasoAnalyzer application."
requires-python = ">=3.10"
authors = [{ name = "Osvaldo J. Vega Rodríguez" }]
license = { text = "CC BY-NC-SA 4.0" }
readme = "README.md"
dependencies = ["pydantic>=1.10"]

[project.scripts]
vaso = "vasoanalyzer.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-qt>=4.4",
    "ruff>=0.6.0",
    "mypy>=1.8.0",
    "types-requests>=2.32.0.20240712",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vasoanalyzer = ["py.typed"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:PyQt5",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F"]
extend-select = ["I", "B", "UP", "SIM"]
ignore = [
    "E203",  # allow whitespace before colon for slices
    "B028",  # optional PyQt relative import warnings
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "I", "B", "UP", "SIM"]
"src/vasoanalyzer/legacy/**" = ["I", "B", "UP", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
no_implicit_optional = true
strict_equality = true


[[tool.mypy.overrides]]
module = [
  "vasoanalyzer.ui.*",
]
disable_error_code = ["attr-defined", "call-arg"]
ignore_errors = false


[[tool.mypy.overrides]]
module = "vasoanalyzer.ui.main_window"
ignore_errors = true


[[tool.mypy.overrides]]
module = [
  "vasoanalyzer.services",
  "vasoanalyzer.services.*",
  "vasoanalyzer.storage.sqlite",
  "vasoanalyzer.storage.sqlite.*",
  "vasoanalyzer.core.events.*",
  "vasoanalyzer.core.traces.*",
  "vasoanalyzer.ui.plots",
  "vasoanalyzer.ui.plots.*",
  "vasoanalyzer.ui.dialogs.settings",
  "vasoanalyzer.ui.dialogs.settings.*",
  "vasoanalyzer.core.project_context",
  "vasoanalyzer.core.repo_factory",
]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
